2006-10-10  Tom Tromey  <tromey@redhat.com>

	PR classpath/29362:
	* gnu/xml/transform/TransformerImpl.java (transform): Only strip if
	there is a stylesheet.

2006-10-10  Roman Kennke  <kennke@aicas.com>

	* java/awt/Toolkit.java
	(getDefaultTookit): Make method synchronized to avoid
	accidentally creating more than one toolkits from different
	threads.

2006-10-10  Roman Kennke  <kennke@aicas.com>

	* java/awt/LightweightDispatcher.java
	(handleMouseEvent): Redispatch MOUSE_WHEEL events too.
	(redispatch): Transfer the button to the redispatched event.

2006-10-10  Francis Kung  <fkung@redhat.com>

	* java/awt/image/ColorModel.java (coerceData): Implemented.

2006-10-09  Christian Elias Naur  <elias@oddlabs.com>

	* vm/reference/java/lang/VMClassLoader.java:
	(defineClassWithTransformers): Use proper class name format.

2006-10-09  Gary Benson  <gbenson@redhat.com>

	* java/net/ServerSocket.java
	(implAccept): Add security check.
	(accept): Close socket if security check fails.
	(setSocketFactory): Add security check and already-set check.

2006-10-09  Roman Kennke  <kennke@aicas.com>

	PR 29325
	* javax/swing/JSplitPane.java
	(dividerLocation): New field. Stores the divider location.
	(JSplitPane): Initialize dividerLocation with -1.
	(addImpl): Removed unneeded local variables.
	(getDividerLocation): Manage dividerLocation in the JSplitPane
	class, not in the UI.
	(setDividerLocation): Manage dividerLocation in the JSplitPane
	class, not in the UI. Only call the UI method for notification.
	* javax/swing/plaf/basic/BasicSplitPaneUI.java
	(BasicHorizontalLayoutManager.layoutContainer): Fetch divider
	location from the JSplitPane. Honour the minimumSize, but only
	if the divider location hasn't been set explicitly.
	(BasicHorizontalLayoutManager.minimumLayoutSize): Removed unneeded
	statement.
	(BasicHorizontalLayoutManager.preferredLayoutSize): Removed unneeded
	statement.
	(BasicHorizontalLayoutManager.resetToPreferredSizes): Don't touch
	the divider location.